RESOLVED FIXED177015
Fix the macOS CMake build
https://bugs.webkit.org/show_bug.cgi?id=177015
Summary Fix the macOS CMake build
Tim Horton
Reported 2017-09-15 11:09:03 PDT
Fix the macOS CMake build
Attachments
Patch (11.61 KB, patch)
2017-09-15 11:09 PDT, Tim Horton
no flags
Patch (11.54 KB, patch)
2017-09-15 11:52 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-09-15 11:09:21 PDT
Tim Horton
Comment 2 2017-09-15 11:50:04 PDT
Apparently I didn't get that quite right.
Alex Christensen
Comment 3 2017-09-15 11:51:41 PDT
Comment on attachment 320929 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=320929&action=review > Source/WebKit/CMakeLists.txt:261 > + Shared/cf/CookieStorageUtilsCF.mm Yep, put this in PlatformMac
Tim Horton
Comment 4 2017-09-15 11:52:44 PDT
Tim Horton
Comment 5 2017-09-15 11:52:55 PDT
Indeed.
WebKit Commit Bot
Comment 6 2017-09-15 12:53:05 PDT
Comment on attachment 320937 [details] Patch Clearing flags on attachment: 320937 Committed r222103: <http://trac.webkit.org/changeset/222103>
WebKit Commit Bot
Comment 7 2017-09-15 12:53:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-09-27 12:31:04 PDT
Note You need to log in before you can comment on or make changes to this bug.