Fix the macOS CMake build https://bugs.webkit.org/show_bug.cgi?id=177015

Reviewed by Andy Estes.

Source/WebCore:

* CMakeLists.txt:
Add Payment Request files.

* PlatformMac.cmake:
Add the CoreServices umbrella framework to the framework search path.
Add service workers directories to the forwarding headers path.
Add Modules/cache directory to the forwarding headers path.

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::resolveLengthAttributeForSVG): Deleted unused function.

Source/WebCore/PAL:

* pal/PlatformMac.cmake:
Add WebPanel.

Source/WebKit:

* CMakeLists.txt:
Add the new RemoteLayerTree directories to the header search path.
Add CookieStorageUtilsCF.mm to Sources.

* PlatformMac.cmake:
Add a few more files, and fix the generated forwarding headers include
path to name "WebKit" instead of "WebKit2".


Canonical link: https://commits.webkit.org/193425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222103 268f45cc-cd09-0410-ab3c-d52691b4dbfc